syntax = "proto3";

option  go_package ="./proto;proto";

import "google/protobuf/empty.proto";

service User {
  rpc Users(ListReq) returns (ListResp); // 获取用户列表
  rpc GetUserByPhone(PhoneReq) returns (UserItem); // 通过 phone 查询用户
  rpc GetUserById(IdReq) returns (UserItem); // 通过 id 获取用户

  rpc CreateUser(CreateReq) returns(UserItem); // 创建用户

  rpc UpdateUser(UpdateReq) returns (google.protobuf.Empty); // 更新用户

  rpc CheckPassword(CheckReq) returns (CheckResp); // 检测密码是否相等

}

message CheckResp {
  bool isEqual = 1;
}
message CheckReq {
  string password = 1;
  string encodePassword = 2;
}

message CreateReq {
  string phone = 1;
  string password = 2;
  int32  role = 3;
}

message UpdateReq {
  uint64 id = 1;
  string password = 2;
  string nickname = 3;
  uint64 birthday = 4;
  int32  gender = 5;
  int32  role = 6;
  string phone = 7;
}

message IdReq {
  uint64 id = 1;
}
message PhoneReq {
  string phone = 1;
}

message ListReq {
  uint32 pageIndex = 1;
  uint32 pageSize = 2;
}

message UserItem {
  uint64 id = 1;
  string phone = 2;
  string password = 3;
  string nickname = 4;
  uint64 birthday = 5;
  int32 gender = 6;
  int32 role = 7;
}

message ListResp {
  uint32 total = 1;
  repeated UserItem items = 2;
}